contact page created

--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                 <li class="nav-item mb-4">
                   <a
                     class="nav-link py-3 pe-2 border-bottom border-secondary"
-                    href="./contact.html"
+                    href="#Contact us"
                     >Contact us</a
                   >
                 </li>
@@ -124,37 +124,9 @@
         </div>
       </nav>
     </header>
-    <noscript>
-      <!-- Alternative content for users with disabled scripts -->
-      <p>
-        For the best experience, please enable JavaScript in your browser or use
-        diffrent browser.
-      </p>
-      <p>
-        You can still explore our website, but some features may not work
-        without JavaScript.
-      </p>
-    </noscript>
 
     <main>
-      <section class="hero-container">
-        <div
-          class="banner-image-area user-select-none p-3 p-md-5 m-3 m-md-5 text-center">
-          <img
-            class="object-fit-contain max-w-100"
-            src="./images/logo_xl.png"
-            alt="Crown Arrow Logo"
-            width="701"
-            height="456" />
-        </div>
-        <div class="user-select-none my-md-5 my-3 pb-md-5 pb-3 text-center">
-          <img
-            class="object-fit-contain"
-            src="./images/gold-pattern-design-01.png"
-            width="100%"
-            alt="Gold Pattern Design" />
-        </div>
-      </section>
+      <section class="hero-container"></section>
     </main>
 
     <footer class="bg-dark-secondary pt-5 pb-4">
