management page done

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                 <li class="nav-item mb-4">
                   <a
                     class="nav-link py-3 pe-2 border-bottom border-secondary"
-                    href="#capital-management"
+                    href="./management.html"
                     >Capital Management</a
                   >
                 </li>
