login page done

--- a/contact.html
+++ b/contact.html
@@ -60,8 +60,8 @@
           </div>
           <div class="px-3 px-md-0">
             <span class="d-none d-md-block"
-              ><a class="primary-btn mx-3" href="#login">Login</a
-              ><a class="primary-btn mx-3" href="#disclosure"
+              ><a class="primary-btn mx-3" href="./login.html">Login</a
+              ><a class="primary-btn mx-3" href="./disclosure.html"
                 >Disclosure</a
               ></span
             >
