--- a/management.html
+++ b/management.html
@@ -120,8 +120,8 @@
                       >
                     </li>
                     <li class="nav-item my-4 d-flex d-md-none gap-3">
-                      <a class="primary-btn px-4 py-2" href="#login">Login</a
-                      ><a class="primary-btn px-4 py-2" href="#disclosure"
+                      <a class="primary-btn px-4 py-2" href="./login.html">Login</a
+                      ><a class="primary-btn px-4 py-2" href="./disclosure.html"
                         >Disclosure</a
                       >
                     </li>
