aligment issue solve

--- a/management.html
+++ b/management.html
@@ -153,15 +153,15 @@
     <main>
       <!-- capital management start -->
       <section class="capital_management_container container">
-        <h2 class="section_title">Capital Management</h2>
-        <p class="section_des">
-          Capital Management at CrownArrow Capital, LP encompasses a strategic
-          approach tailored to the unique needs of our investors, particularly
-          within the framework of a Private Equity Fund Model. As a trusted
-          commodities investment fund manager, we diligently manage capital
-          allocation, risk mitigation, and fund performance to maximize returns
-          for our accredited investors.
-        </p>
+          <h2 class="section_title mx-auto">Capital Management</h2>
+          <p class="section_des mx-auto">
+            Capital Management at CrownArrow Capital, LP encompasses a strategic
+            approach tailored to the unique needs of our investors, particularly
+            within the framework of a Private Equity Fund Model. As a trusted
+            commodities investment fund manager, we diligently manage capital
+            allocation, risk mitigation, and fund performance to maximize returns
+            for our accredited investors.
+          </p>
         <!-- cards container -->
         <div class="mt-5">
           <!-- arrow path container -->
@@ -297,8 +297,8 @@
 
       <!-- Accredited Investors start -->
       <section class=" container">
-        <h2 class="section_title">Working with Accredited Investors</h2>
-        <p class="section_des">
+        <h2 class="section_title mx-auto">Working with Accredited Investors</h2>
+        <p class="section_des mx-auto">
           At CrownArrow Capital, LP, we collaborate with accredited investors
           who meet specific criteria set by regulatory bodies. Accredited
           investors, typically high-net-worth individuals, institutional
