--- a/management.html
+++ b/management.html
@@ -120,7 +120,8 @@
                       >
                     </li>
                     <li class="nav-item my-4 d-flex d-md-none gap-3">
-                      <a class="primary-btn px-4 py-2" href="./login.html">Login</a
+                      <a class="primary-btn px-4 py-2" href="./login.html"
+                        >Login</a
                       ><a class="primary-btn px-4 py-2" href="./disclosure.html"
                         >Disclosure</a
                       >
@@ -153,15 +154,15 @@
     <main>
       <!-- capital management start -->
       <section class="capital_management_container container">
-          <h2 class="section_title mx-auto">Capital Management</h2>
-          <p class="section_des mx-auto">
-            Capital Management at CrownArrow Capital, LP encompasses a strategic
-            approach tailored to the unique needs of our investors, particularly
-            within the framework of a Private Equity Fund Model. As a trusted
-            commodities investment fund manager, we diligently manage capital
-            allocation, risk mitigation, and fund performance to maximize returns
-            for our accredited investors.
-          </p>
+        <h2 class="section_title mx-auto">Capital Management</h2>
+        <p class="section_des mx-auto">
+          Capital Management at CrownArrow Capital, LP encompasses a strategic
+          approach tailored to the unique needs of our investors, particularly
+          within the framework of a Private Equity Fund Model. As a trusted
+          commodities investment fund manager, we diligently manage capital
+          allocation, risk mitigation, and fund performance to maximize returns
+          for our accredited investors.
+        </p>
         <!-- cards container -->
         <div class="mt-5">
           <!-- arrow path container -->
@@ -296,7 +297,7 @@
       <!-- capital management end -->
 
       <!-- Accredited Investors start -->
-      <section class=" container">
+      <section class="container">
         <h2 class="section_title mx-auto">Working with Accredited Investors</h2>
         <p class="section_des mx-auto">
           At CrownArrow Capital, LP, we collaborate with accredited investors
@@ -308,72 +309,87 @@
         </p>
         <!-- cards -->
         <div class="row mt-5">
-            <!-- Strategic Allocation -->
-            <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
-                  <div class="card_without_border">
-                        <!-- icon area -->
-                        <div class="border_card_icon mb-3">
-                          <img src="./images/rocket.png" alt="rocket" />
-                        </div>
-                        <div class="card_without_border_text_container">
-                          <h4>Strategic Allocation</h4>
-                          <p>
-                            We employ a disciplined approach to capital allocation,
-                            identifying lucrative investment opportunities within the
-                            commodities sector. Our seasoned team of experts meticulously
-                            assesses market trends, economic indicators, and industry
-                            dynamics to allocate capital strategically across various
-                            commodities, ensuring optimal risk-adjusted returns.
-                          </p>
-                        </div>
-                  </div>
+          <!-- Strategic Allocation -->
+          <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+            <div class="card_without_border">
+              <!-- icon area -->
+              <div class="border_card_icon mb-3">
+                <img src="./images/rocket.png" alt="rocket" />
+              </div>
+              <div class="card_without_border_text_container">
+                <h4>Strategic Allocation</h4>
+                <p>
+                  We employ a disciplined approach to capital allocation,
+                  identifying lucrative investment opportunities within the
+                  commodities sector. Our seasoned team of experts meticulously
+                  assesses market trends, economic indicators, and industry
+                  dynamics to allocate capital strategically across various
+                  commodities, ensuring optimal risk-adjusted returns.
+                </p>
+              </div>
             </div>
-            <!-- Personalized Investment -->
-            <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
-                  <div class="card_without_border">
-                        <!-- icon area -->
-                        <div class="border_card_icon mb-3">
-                          <img src="./images/Certificate.png" alt="Certificate" />
-                        </div>
-                        <div class="card_without_border_text_container">
-                          <h4>Personalized Investment Strategies</h4>
-                          <p>
-                            We work closely with accredited investors to understand their investment objectives, risk tolerance, and financial goals. Our personalized approach ensures that investment strategies are aligned with the specific needs and preferences of each investor, maximizing the potential for wealth accumulation and capital preservation.
-                          </p>
-                        </div>
-                  </div>
+          </div>
+          <!-- Personalized Investment -->
+          <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+            <div class="card_without_border">
+              <!-- icon area -->
+              <div class="border_card_icon mb-3">
+                <img src="./images/Certificate.png" alt="Certificate" />
+              </div>
+              <div class="card_without_border_text_container">
+                <h4>Personalized Investment Strategies</h4>
+                <p>
+                  We work closely with accredited investors to understand their
+                  investment objectives, risk tolerance, and financial goals.
+                  Our personalized approach ensures that investment strategies
+                  are aligned with the specific needs and preferences of each
+                  investor, maximizing the potential for wealth accumulation and
+                  capital preservation.
+                </p>
+              </div>
             </div>
-            <!-- Enhanced Due Diligence -->
-            <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
-                  <div class="card_without_border">
-                        <!-- icon area -->
-                        <div class="border_card_icon mb-3">
-                          <img src="./images/box.png" alt="box" />
-                        </div>
-                        <div class="card_without_border_text_container">
-                          <h4>Enhanced Due Diligence 
-                            and Transparency</h4>
-                          <p>
-                            Accredited investors benefit from enhanced due diligence processes and transparent reporting practices. We provide comprehensive insights into investment opportunities, thorough risk assessments, and regular performance updates, enabling accredited investors to make informed decisions and actively monitor their investment portfolios.
-                          </p>
-                        </div>
-                  </div>
+          </div>
+          <!-- Enhanced Due Diligence -->
+          <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+            <div class="card_without_border">
+              <!-- icon area -->
+              <div class="border_card_icon mb-3">
+                <img src="./images/box.png" alt="box" />
+              </div>
+              <div class="card_without_border_text_container">
+                <h4>Enhanced Due Diligence and Transparency</h4>
+                <p>
+                  Accredited investors benefit from enhanced due diligence
+                  processes and transparent reporting practices. We provide
+                  comprehensive insights into investment opportunities, thorough
+                  risk assessments, and regular performance updates, enabling
+                  accredited investors to make informed decisions and actively
+                  monitor their investment portfolios.
+                </p>
+              </div>
             </div>
-            <!-- Collaborative Partnership -->
-            <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
-                  <div class="card_without_border">
-                        <!-- icon area -->
-                        <div class="border_card_icon mb-3">
-                          <img src="./images/down.png" alt="down" />
-                        </div>
-                        <div class="">
-                          <h4>Collaborative Partnership</h4>
-                          <p>
-                            We foster collaborative partnerships with accredited investors, built on trust, communication, and shared objectives. Our dedicated team of professionals provides ongoing support, expert guidance, and proactive communication to ensure that accredited investors have a seamless and rewarding investment experience with CrownArrow Capital, LP.
-                          </p>
-                        </div>
-                  </div>
+          </div>
+          <!-- Collaborative Partnership -->
+          <div class="col-sm-12 col-md-6 col-lg-3 mb-4">
+            <div class="card_without_border">
+              <!-- icon area -->
+              <div class="border_card_icon mb-3">
+                <img src="./images/down.png" alt="down" />
+              </div>
+              <div class="">
+                <h4>Collaborative Partnership</h4>
+                <p>
+                  We foster collaborative partnerships with accredited
+                  investors, built on trust, communication, and shared
+                  objectives. Our dedicated team of professionals provides
+                  ongoing support, expert guidance, and proactive communication
+                  to ensure that accredited investors have a seamless and
+                  rewarding investment experience with CrownArrow Capital, LP.
+                </p>
+              </div>
             </div>
+          </div>
+        </div>
       </section>
       <!-- Accredited Investors end -->
 
@@ -384,8 +400,14 @@
           <div class="comprehensive_variant_container">
             <div>
               <h1>Through our comprehensive</h1>
-              <h2>capital management approach and collaborative partnership with accredited investors</h2>
-              <p>We strive to deliver superior investment outcomes and create lasting value in the commodities investment landscape.</p>
+              <h2>
+                capital management approach and collaborative partnership with
+                accredited investors
+              </h2>
+              <p>
+                We strive to deliver superior investment outcomes and create
+                lasting value in the commodities investment landscape.
+              </p>
             </div>
           </div>
         </div>
